add_executable( ENDFtk.StructureDivision.test StructureDivision.test.cpp )
set( test_flags ${ENDFtk_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( ENDFtk.StructureDivision.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( ENDFtk.StructureDivision.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( ENDFtk.StructureDivision.test PUBLIC ENDFtk )
add_test( NAME ENDFtk.StructureDivision COMMAND ENDFtk.StructureDivision.test ) 
